prometheus/node-exporter-ds.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: kube-system
  labels:
    k8s-app: node-exporter
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    version: v0.18.1
spec:
  selector:
    matchLabels:
      k8s-app: node-exporter
      version: v0.18.1
  updateStrategy:
    type: OnDelete
  template:
    metadata:
      labels:
        k8s-app: node-exporter
        version: v0.18.1
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      priorityClassName: system-node-critical
      containers:
        - name: prometheus-node-exporter
          image: "prom/node-exporter:v0.18.1"
          imagePullPolicy: "IfNotPresent"
          args:
            #- --path.procfs=/host/proc
            #- --path.sysfs=/host/sys
            - --path.rootfs=/host
            - --collector.textfile.directory=/host/data/custom_metrics
          ports:
            - name: metrics
              containerPort: 9100
              hostPort: 9100
          volumeMounts:
            #- name: proc
            #  mountPath: /host/proc
            #  readOnly:  true
            #- name: sys
            #  mountPath: /host/sys
            #  readOnly: true
            - name: root
              mountPath: /host
              readOnly: true
              mountPropagation: HostToContainer
          resources:
            limits:
              cpu: 10m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 50Mi
      hostNetwork: true
      hostPID: true
      volumes:
        - name: root
          hostPath: 
            path: /
       # - name: proc
       #   hostPath:
       #     path: /proc
       # - name: sys
       #   hostPath:
       #     path: /sys
