prometheus/ingress-alertmanager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: outside
spec:
  rules:
  - host: alertmanager.test.com
    http:
      paths:
      - path: 
        backend:
          serviceName: alertmanager
          servicePort: 80
