prometheus/ingress-prometheus-server.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: kube-system
  annotations:
          kubernetes.io/ingress.class: outside
spec:
  rules:
  - host: prometheus-server.test.com
    http:
      paths:
      - path: 
        backend:
          serviceName: prometheus
          servicePort: 9090
